[project]
name = "atb-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "sqlalchemy>=2.0.49",
    "urllib3>=2.7.0",
]
